src/objects/APTS_Conversion_order_UX_settings__mdt.object
<CustomObject>
    <fields>
        <fullName>APTS_Attributes_option_group_visibilty__c</fullName>
        <inlineHelpText>Coma seperated option groups  - inclusion for which attributes should be visible</inlineHelpText>
        <label>Attributes Option Group visibility</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Consumption_contract_attributes__c</fullName>
        <inlineHelpText>Comma seperated attributes for Consumption model type of contract</inlineHelpText>
        <label>Consumption contract attributes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Exclusion_Option_Groups__c</fullName>
        <inlineHelpText>Option group name comma seperated - exludes from option group list</inlineHelpText>
        <label>Exclusion Option Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Exclusion_Options__c</fullName>
        <inlineHelpText>Salesforce ID 18 digit comma seperated - exludes from option list</inlineHelpText>
        <label>Exclusion Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Free_on_loan_contract_attributes__c</fullName>
        <inlineHelpText>Comma seperated attributes for free on loan type of contract</inlineHelpText>
        <label>Free on loan contract attributes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_hours_API_name__c</fullName>
        <inlineHelpText>Product Attribute Value object API name fiield that drives pricing of Full Co operating products</inlineHelpText>
        <label>Number of hours API name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Read_only_attributes_Bundle__c</fullName>
        <inlineHelpText>comma seperated product attribute fields at bundle level - prevents header attributes from being edited</inlineHelpText>
        <label>Read only attributes (Bundle)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_RentBuy_contract_attributes__c</fullName>
        <inlineHelpText>Comma seperated attributes for RentBuy type of contract</inlineHelpText>
        <label>RentBuy contract attributes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Rent_contract_attributes__c</fullName>
        <inlineHelpText>Comma seperated attributes for Rent type of contract</inlineHelpText>
        <label>Rent contract attributes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Rental_charge_type_Type_of_contract__c</fullName>
        <label>Rental charge type (Type of contract)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Required_attribute_names__c</fullName>
        <description>Field API name of product attribute object which are required on the UX</description>
        <inlineHelpText>Field API name of product attribute object which are required on the UX</inlineHelpText>
        <label>Required attribute names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_charge_type_Type_of_contract__c</fullName>
        <label>Sales charge type (Type of contract)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_contract_attributes__c</fullName>
        <inlineHelpText>Comma seperated attributes for Sales type of contract</inlineHelpText>
        <label>Sales contract attributes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Technical_services_option_groups__c</fullName>
        <inlineHelpText>Comma seperated option group texts - Inclusion for technical services product pricing</inlineHelpText>
        <label>Technical services option groups</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Trial_contract_Attributes_CTC__c</fullName>
        <label>Trial contract Attributes CTC To Sales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Trial_contract_Attributes_CTC_c__c</fullName>
        <label>Trial contract Attributes CTC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trial_To_FOL__c</fullName>
        <label>Trial To FOL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trial_To_Rent__c</fullName>
        <label>Trial To Rent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trial_To_Sales__c</fullName>
        <label>Trial To Sales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Conversion order UX setting</label>
    <pluralLabel>Conversion order UX settings</pluralLabel>
</CustomObject>